[package]
name = "tiny-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
bincode = "1.3.3"
libaes = "0.7.0"
sha1 = "0.10.6"

[dev-dependencies]
hex-literal = "0.4.1"
rstest = "0.18.2"
