[package]
name = "tiny-crypto"
version = "0.1.2"
edition = "2021"
authors = ["mikewei@github"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mikewei/tiny-crypto-rs"
repository = "https://github.com/mikewei/tiny-crypto-rs"
description = "The tiny-crypto crate is a collection of tools for common crypto algorithms, with APIs aimed to be simple to use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
bincode = "1.3.3"
hex = "0.4.3"
libaes = "0.7.0"
sha1 = "0.10.6"

[dev-dependencies]
hex-literal = "0.4.1"
rstest = "0.18.2"
